[package]
name = "s-expressions"
version = "0.1.0"
edition = "2018"
build = "build.rs"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
logos = "0.12.0"
logos-derive = "0.12.0"
